--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "react-hook-form": "^7.54.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
@@ -39,7 +38,9 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "react-hook-form": "^7.54.2",
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
